fixed quote header from clipping other elements

--- a/css/main.css
+++ b/css/main.css
@@ -377,7 +377,7 @@ p {
     }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 575px) {
     .logo {
         width: 250px;
     }
